# NLPeace

./: .gitignore  .gitmodules  DevGuide .md  DockerReadme.md  Dockerfile  LICENSE  LICENSE.md  Pipfile  README.md  contributionGuide.md  deployment.txt  docker-compose.yml  requirements-nlp.txt
.github/workflows/: django.yml
CourseAdmin/: LICENSE
NLP/: data_processing.py  logger_config.py  main.py  models.py
NLP/models/: best_xgb_model.joblib
NLPeace/: manage.py  requirements.txt
NLPeace/NLPeace/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
NLPeaceAPI/: .gitignore  LICENSE  Pipfile  Procfile  README.md  app.py  requirements.txt
NLPeaceAPI/NLP/: bert_pretrained.py  data_processing.py  emotionDetectionModel.py  logger_config.py  main.py  models.py  requirements.txt
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  Pipfile  Procfile  dev.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  post_install.sh  prod.env  requirements.txt  startup-script.sh  test.txt
backend/api/: fixtures.json  manage.py
backend/core/: models.py  serializers.py  views.py
backend/init-db/: initdb.sql
blockchain-chat/backend/: package-lock.json  package.json
djangoCode/: manage.py
telemetry/telemetry_service/: .env  Cargo.toml  Dockerfile
telemetry/telemetry_service/config_files/: config.json
telemetry/telemetry_service/src/: main.rs  restart.sh
telemetry/telemetry_service/src/internal/config/: config.rs
telemetry/telemetry_service/src/internal/controller/: api.rs  mod.rs  routes.rs
(+205 files in other folders)
