[package]
edition = "2021"
name = "more_simple_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
chrono = {version = "*", features = ["serde"]}
dotenv = "*"
notify = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sqlx = {version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"]}
uuid = { version = "*", features = ["serde", "v4"] }

